<resources>
    <string name="app_name">TicTacToe</string>
    <string name="board_3x3">Board 3x3</string>
    <string name="board_5x5">Board 5x5</string>
    <string name="ttt_logo">ttt logo</string>
    <string name="_01">01</string>
    <string name="_00">00</string>
    <string name="_02">02</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_20">20</string>
    <string name="_22">22</string>
    <string name="_21">21</string>
    <string name="score">Score</string>
    <string name="reset">reset</string>
    <string name="player1_0">Player1: 0</string>
    <string name="player2_0">Player2: 0</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
</resources>