<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:id="@+id/backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1919"
    tools:context=".Board5x5Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bac"
            android:layout_width="match_parent"
            android:layout_height="134dp">

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="129dp"
                android:layout_height="63dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#EDE8E8"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16000003" />

            <TextView
                android:id="@+id/player1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_0"
                android:textColor="#FFEDE8E8"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.747" />

            <TextView
                android:id="@+id/player2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2_0"
                android:textColor="#FFEDE8E8"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toEndOf="@+id/player1Score"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="411dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button00"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button01"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button02"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button03"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button04"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button21"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button30"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button32"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button33"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button34"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button40"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button41"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button42"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button43"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />

                <Button
                    android:id="@+id/button44"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#C61616" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="false"
                android:layout_marginStart="99dp"
                android:layout_marginEnd="76dp"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/reset" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>